--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="image">
-            <img src="/images/home-img.png" alt="home image">
+            <img src="../images/home-img.png" alt="home image">
         </div>
 
     </section>
@@ -67,7 +67,7 @@
 
         <div class="row-1">
             <div class="image">
-                <img src="/images/about-img.jpg" alt="about img">
+                <img src="../images/about-img.jpg" alt="about img">
             </div>
 
             <div class="content">
@@ -105,7 +105,7 @@
 
 
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
