--- a/index.html
+++ b/index.html
@@ -93,6 +93,33 @@
                 <a href="#" class="btn"> download CV </a>
             </div>
         </div>
+
+        <h1 class="heading"> <span>my</span> skills </h1>
+
+        <div class="skill-container">
+
+            <div class="box">
+                <h3> >> 2+ </h3>
+                <p> happy clients</p>
+                <!-- <img src="https://tokar.ua/img/upl/2016/10/bef89cb2015d6a1c01180c46f3f7f88e.png" alt=""> -->
+            </div>
+
+            <div class="box">
+                <h3> >> 2 </h3>
+                <p> happy clients</p>
+            </div>
+
+            <div class="box">
+                <h3> >> 2 </h3>
+                <p> complete projects</p>
+            </div>
+
+            <div class="box">
+                <h3> >> 2+ </h3>
+                <p> awards</p>
+            </div>
+
+        </div>
     </section>
 
     <!-- about section end  -->
