--- a/index.html
+++ b/index.html
@@ -124,6 +124,118 @@
 
     <!-- about section end  -->
 
+    <!-- service section start -->
+    <section class="service" id="service">
+        <h1 class="heading"> <span> my </span> services </h1>
+        <div class="box-container">
+
+            <div class="box">
+                <i class="fas fa-code"></i>
+                <h3>web design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-paint-brush"></i>
+                <h3>graphic design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-mobile"></i>
+                <h3>Responsive design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-bullhorn"></i>
+                <h3>seo marketing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-chart-line"></i>
+                <h3>digital marketing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-envelope"></i>
+                <h3>e-mail marketing</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt</p>
+            </div>
+        </div>
+    </section>
+    <!-- service section end -->
+
+    <!-- experience section start -->
+    <section class="experience" id="experience">
+        <h1 class="heading"> <span> my </span> experience </h1>
+        <div class="box-container">
+
+            <div class="box">
+                <div class="content">
+                    <span> 2015 - 2016 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="content">
+                    <span> 2016 - 2017 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="content">
+                    <span> 2017 - 2018 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="content">
+                    <span> 2019 - 2020 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="content">
+                    <span> 2020 - 2021 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="content">
+                    <span> 2021 - 2022 </span>
+                    <h3>front-end developer</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- experience section end -->
+
 
 
 
