--- a/index.html
+++ b/index.html
@@ -236,13 +236,121 @@
     </section>
     <!-- experience section end -->
 
+    <!-- portfolio section start -->
+    <section class="portfolio" id="portfolio">
+        <h1 class="heading"> <span> my </span> portfolio </h1>
 
+        <div class="box-container">
 
+            <div class="box">
+                <img src="./images/img-1.jpg" alt="project">
+                <h3>project 1</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="./images/img-2.jpg" alt="project">
+                <h3>project 2</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="./images/img-3.jpg" alt="project">
+                <h3>project 3</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="./images/img-4.jpg" alt="project">
+                <h3>project 4</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="./images/img-5.jpg" alt="project">
+                <h3>project 5</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
 
+            <div class="box">
+                <img src="./images/img-6.jpg" alt="project">
+                <h3>project 6</h3>
+                <div class="icons">
+                    <a href="#" class="fas fa-link"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-search"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- portfolio section end -->
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <h1 class="heading"> contact <span> me </span></h1>
+
+        <div class="icons-container">
+
+            <div class="icons">
+                <i class="fas fa-envelope"></i>
+                <h3>my e-mail</h3>
+                <p>furpost@gmail.com</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-phone"></i>
+                <h3>my number</h3>
+                <p>+123-456-78-90</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-map-marker-alt"></i>
+                <h3>my address</h3>
+                <p>Tomsk</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <form action="">
+                <input type="text" placeholder="name" class="box">
+                <input type="email" placeholder="email" class="box">
+
+                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+
+                <input type="submit" class="btn" value="send message">
+            </form>
+
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140975.40074297183!2d84.
+            8685497898508!3d56.48945412368304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x432693b2
+            b65d4c1b%3A0xcf0bf11d988ae72f!2z0KLQvtC80YHQuiwg0KLQvtC80YHQutCw0Y8g0L7QsdC7Lg!5e0!3m2!1sru!2sru!
+            4v1645349863686!5m2!1sru!2sru"></iframe>
+        </div>
+    </section>
+    <!-- contact section end -->
+
+    <!-- footer section start -->
+    <footer class="footer">Made by <span> Lex </span></footer>
+    <!-- footer section end -->
 
     <script src="./js/script.js"></script>
 </body>
