--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <!-- contact section end -->
 
     <!-- footer section start -->
-    <footer class="footer">Made by <span> Lex </span></footer>
+    <footer> Made by <span class="creatorName"> Lex </span></footer>
     <!-- footer section end -->
 
     <script src="./js/script.js"></script>
