--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
 
         <div class="row">
-            <form action="">
+            <form action="mailto:furpostalll@gmail.com">
                 <input type="text" placeholder="name" class="box">
                 <input type="email" placeholder="email" class="box">
 
