--- a/index.html
+++ b/index.html
@@ -335,15 +335,12 @@
                 <input type="text" placeholder="name" class="box">
                 <input type="email" placeholder="email" class="box">
 
-                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+                <textarea placeholder="message" cols="30" rows="10"></textarea>
 
                 <input type="submit" class="btn" value="send message">
             </form>
 
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140975.40074297183!2d84.
-            8685497898508!3d56.48945412368304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x432693b2
-            b65d4c1b%3A0xcf0bf11d988ae72f!2z0KLQvtC80YHQuiwg0KLQvtC80YHQutCw0Y8g0L7QsdC7Lg!5e0!3m2!1sru!2sru!
-            4v1645349863686!5m2!1sru!2sru"></iframe>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140975.40074297183!2d84.8685497898508!3d56.48945412368304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x432693b2b65d4c1b%3A0xcf0bf11d988ae72f!2z0KLQvtC80YHQuiwg0KLQvtC80YHQutCw0Y8g0L7QsdC7Lg!5e0!3m2!1sru!2sru!4v1645349863686!5m2!1sru!2sru"></iframe>
         </div>
     </section>
     <!-- contact section end -->
